--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,6 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "strict": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "skipLibCheck": true
   }
 }
